--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "graphql-core" %}
-{% set version = "1.1" %}
+{% set version = "2.0.dev20170801051721" %}
 {% set bundle = "tar.gz" %}
 {% set hash_type = "sha256" %}
-{% set hash = "63bb8593aeeadb0a53e14207b910027fe51158d017927fad87326dac806185ee" %}
+{% set hash = "98460b9dc9ef7996554b9d83651716bfb2e72991c410f2505b699c7ee5389468" %}
 {% set build = 1 %}
 
 package:
@@ -26,7 +26,7 @@ requirements:
 
   run:
     - python
-    - six >=1.10.0
+    - six >=2.0.dev201708010517210.0
     - promise >=2.0
 
 test:
