--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,33 +1,30 @@
 {% set name = "graphql-core" %}
-{% set version = "1.1" %}
-{% set bundle = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash = "63bb8593aeeadb0a53e14207b910027fe51158d017927fad87326dac806185ee" %}
-{% set build = 1 %}
+{% set version = "2.0" %}
+{% set sha256 = "4830699be53f9154273fa15726fc8b0c90bc22bbb8fc7c932586503b3cb9330e" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ bundle }}
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ bundle }}
-  {{ hash_type }}: {{ hash }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   noarch: python
-  number: {{ build }}
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  number: 0
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
-    - setuptools
+    - pip
 
   run:
     - python
     - six >=1.10.0
     - promise >=2.0
+    - rx >=1.6.0
 
 test:
   imports:
@@ -35,7 +32,6 @@ test:
     - graphql.error
     - graphql.execution
     - graphql.execution.executors
-    - graphql.execution.experimental
     - graphql.language
     - graphql.pyutils
     - graphql.type
@@ -43,14 +39,16 @@ test:
     - graphql.validation
     - graphql.validation.rules
 
+
 about:
   home: https://github.com/graphql-python/graphql-core
-  license_file: {{ RECIPE_DIR }}/LICENSE
+  license_file:  '{{ environ["RECIPE_DIR"] }}/LICENSE'
   license: MIT
   license_family: MIT
-  summary: 'GraphQL implementation for Python'
+  summary: 'GraphQL base implementation for Python'
   dev_url: https://github.com/graphql-python/graphql-core
 
 extra:
   recipe-maintainers:
     - pmlandwehr
+    - bollwyvl
