--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "graphql-core" %}
-{% set version = "2.3.1" %}
+{% set version = "2.3.2" %}
 
 package:
   name: {{ name }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 74a8f509ae8c4a58271f5d6b46d5c75b4aed116821ab62dea252d8041bfe057a
+  sha256: aac46a9ac524c9855910c14c48fc5d60474def7f99fd10245e76608eba7af746
 
 build:
   noarch: python
@@ -26,18 +26,24 @@ requirements:
     - rx >=1.6,<2
 
 test:
+  requires:
+    - pip
   imports:
     - graphql
+  commands:
+    - python -m pip check
 
 about:
-  home: https://github.com/graphql-python/graphql-core
+  home: https://github.com/graphql-python/graphql-core-legacy
   license: MIT
   license_family: MIT
   license_file: LICENSE
-  summary: 'A Pythonport of the GraphQL.js reference implementation of GraphQL.'
+  summary: A Python port of the GraphQL.js reference implementation of GraphQL.
+  doc_url: https://graphql-core-3.readthedocs.io
 
 extra:
   recipe-maintainers:
     - pmlandwehr
     - carlodri
     - bollwyvl
+    - KingDarBoja
