--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ test:
   source_files:
     - tests
   requires:
-    - pytest >=5.3,<5.4
+    - pytest >=5.4.0
     - pytest-asyncio >=0.10,<1
     - pytest-benchmark >=3.2,<4
     - pytest-cov >=2.8,<3
